[Spring 경로 조회 - 2단계] 써머(최혜원) 미션 제출합니다. (#280)
* refactor: 상수 접근 제어자 변경

* docs: 4단계 요구사항 정리

* feat: 추가 요금인 ExtraFare 클래스 작성 및 노선에 필드로 추가

* refactor: jgrapht 라이브러리를 이용해 경로를 찾는 클래스 분리 및 컴포넌트 등록

* refactor : 테스트 케이스 추가 및 메서드 명 변경

* refactor: 거리별 추가요금 부과 enum으로 분리

* feat: 나이별 요금 할인 적용

* refactor: 패키지 변경

* refactor: hamcrest를 적용해 테스트 개선

* refactor: hamcrest를 적용해 테스트 코드 개선

* refactor: Line 내부 ExtraFare equals 재정의

* refactor: 패키지 명 변경

* refactor: 사용하지 않는 메서드 제거

* feat: 경로 컨트롤러에 대한 통합 테스트 추가

* docs: 체크리스트 업데이트

* feat: 탑승자 나이와 거리에 유효하지 않은 값 예외 처리

* refactor: 필요없는 옵셔널 제거

* refactor: 거리 부가 요금과 나이 할인 enum 계산을 최종값을 바로 받을 수 있도록 개선

* style: 가독성 개선을 위한 줄바꿈

* refactor: 불필요한 의존성 제거

* feat: 경로 조회 요청 dto 추가

* refactor: 사용하지 않는 import 제거